--- a/index.html
+++ b/index.html
@@ -25,15 +25,21 @@
             <source src="StarWars.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
-        <button id="pause" onclick="playAudio()"></i><i class="fas fa-volume-mute"></i></button>
-        <button id="play" onclick="pauseAudio()"><i class="fas fa-volume-up"></i></button>
+        <button id="pause" onclick="playAudio()"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="50" height="50"
+            viewBox="0 0 171 171"
+            style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,171.99612v-171.99612h171.99612v171.99612z" fill="none"></path><g fill="#f1e00f"><path d="M82.72125,10.26c-3.11273,0 -6.3457,1.49625 -8.9775,4.16813l-39.7575,39.65063c-2.19094,1.93711 -3.20625,5.6911 -3.20625,8.33625v46.17c0,2.61844 1.08211,6.35906 3.09937,8.1225l39.65063,39.54375c3.60703,3.67383 6.93352,4.48875 9.08437,4.48875c5.70445,0 9.72563,-5.21015 9.72563,-12.61125v-126.54c0,-7.78852 -4.9964,-11.32875 -9.61875,-11.32875zM10.26,54.61313c-5.73117,0 -10.36687,4.6357 -10.36687,10.36688v41.04c0,5.73117 4.6357,10.36688 10.36688,10.36688h15.28313c-1.12219,-2.68523 -1.60313,-5.54414 -1.60313,-7.80188v-46.17c0,-2.24437 0.5611,-5.08992 1.71,-7.80188zM109.11938,64.87313c-0.14695,0.02672 -0.2939,0.0668 -0.4275,0.10688c-1.2825,0.22711 -2.31117,1.16227 -2.67187,2.40469c-0.3607,1.25578 0.01336,2.59172 0.96188,3.47344l14.64188,14.64188l-14.64187,14.64188c-1.36265,1.36266 -1.36265,3.5536 0,4.91625c1.36266,1.36266 3.5536,1.36266 4.91625,0l14.64188,-14.64187l14.64188,14.64188c1.36266,1.36266 3.5536,1.36266 4.91625,0c1.36266,-1.36265 1.36266,-3.55359 0,-4.91625l-14.64187,-14.64187l14.64188,-14.64187c1.10883,-1.02867 1.40273,-2.65852 0.73477,-4.00781c-0.65461,-1.36265 -2.1375,-2.11078 -3.62039,-1.87031c-0.76148,0.08016 -1.48289,0.4275 -2.03063,0.96187l-14.64187,14.64188l-14.64187,-14.64187c-0.70805,-0.76148 -1.73672,-1.1489 -2.77875,-1.06875z"></path></g></g></svg></i></button>
+        <button id="play" onclick="pauseAudio()"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="50" height="50"
+            viewBox="0 0 171 171"
+            style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,171.99612v-171.99612h171.99612v171.99612z" fill="none"></path><g fill="#ffff00"><path d="M89.56125,10.15312c-3.13945,0 -6.35906,1.49625 -8.87063,4.16813l-40.07812,39.7575c-1.66992,1.75008 -2.9925,5.2636 -2.9925,8.1225v46.27687c0,2.9925 1.16227,6.14531 2.88563,8.01563l39.86438,39.86438c2.85891,2.85891 6.01172,4.38188 9.08437,4.38188c5.74453,0 9.72562,-5.18344 9.72562,-12.61125v-126.54c0,-7.84195 -4.95633,-11.43563 -9.61875,-11.43563zM106.02,27.36v6.84c28.22836,0 51.3,23.07164 51.3,51.3c0,28.22836 -23.07164,51.3 -51.3,51.3v6.84c31.95563,0 58.14,-26.18437 58.14,-58.14c0,-31.95562 -26.18437,-58.14 -58.14,-58.14zM106.02,47.88v6.84c16.93969,0 30.78,13.84031 30.78,30.78c0,16.93969 -13.84031,30.78 -30.78,30.78v6.84c20.68031,0 37.62,-16.93969 37.62,-37.62c0,-20.68031 -16.93969,-37.62 -37.62,-37.62zM17.1,54.72c-5.65102,0 -10.26,4.60898 -10.26,10.26v41.04c0,5.65102 4.60898,10.26 10.26,10.26h15.39c-1.04203,-2.41805 -1.71,-5.10328 -1.71,-7.80188v-46.27687c0,-2.47148 0.62789,-5.08992 1.60312,-7.48125zM106.02,68.4v6.84c5.66438,0 10.26,4.59562 10.26,10.26c0,5.66437 -4.59562,10.26 -10.26,10.26v6.84c9.39164,0 17.1,-7.70836 17.1,-17.1c0,-9.39164 -7.70836,-17.1 -17.1,-17.1z"></path></g></g></svg></i></button>
         <div class="content">Bearer
             <h1>Star Wars</h1>
             <div class="container">
 
 
                 <input type="text" id="find" placeholder="Search Characters" oninput="debounce(main,1000)">
-                <span class="search_icon"><i class="fas fa-search"></i></span>
+                <span class="search_icon"><img src="https://img.icons8.com/ios-glyphs/50/000000/search.png" alt=""></span>
                 <hr>
                 <div id="display"></div>
             </div>
